--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "blockchain_project",
   "version": "0.1.0",
-  "homepage": "https://vibodhnautiyal.github.io/react-gh-pages",
+  "homepage": "https://vibodhnautiyal.github.io/randomness-beacon",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.9.0",
